Fix picture and navbar display on mobile
Using the code from Sanders pull request, with some things rearranged.

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@
   padding: 2rem;
   text-align: center;
 }
+
+img.hyped {
+    float: left;
+    margin-right: 30px;
+}
